<resources>
    <string name="app_name">RecyclerViewProject</string>
    <string name="students">Students</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="profile_clicked">Profile Clicked</string>
    <string name="search_clicked">Search Clicked</string>
    <string name="settings_clicked">Settings Clicked</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="my_name">Ahmed Shosha</string>
    <string name="my_email">ahmed.shosha883@gmail.com</string>
    <string name="review_clicked">Review Clicked</string>
    <string name="favorite_clicked">Favorite Clicked</string>
    <string name="books">Books</string>
    <string name="wantRead">Want to read</string>
    <string name="notification">notification</string>
    <string name="reviews">Reviews</string>
    <string name="favorite">Favorite</string>
</resources>